# Using-Arm-Performance-Libraries-and-Performix

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  test  test.cpp  vector_data.csv
include/: CMakeLists.txt  Point.h  export_data.h  point.h  rectangle.h  scopedTimer.h  vec1D.h  vect.h
scripts/: README.md  requirements.txt  visualize_vectors.py
src/: CMakeLists.txt  Makefile  export_data.cpp  main  main.cpp  point.cpp  rectangle.cpp  vec1d.cpp  vect.cpp
tests/: CMakeLists.txt  generate_visualization.cpp  sweep-test.cpp
